mandatory-labels-constraintsTemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
 annotations:
    azure-policy-definition-id-1: "/providers/Microsoft.Management/managementgroups/CISUBSCRIPTIONS/providers/Microsoft.Authorization/policyDefinitions/K8s Enforcing Namespace Labels"
    constraint-template: https://raw.githubusercontent.com/granwizzard/My_Ansible/master/mandatory-labels-constraintsTemplate.yaml
    constraint-template-installed-by: azure-policy-addon
 labels:
    managed-by: azure-policy-addon
 name: k8sAzurerequiredlabels
  
spec:
  crd:
    spec:
      names:
        kind: k8sAzurerequiredlabels
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            labels:
              type: array
              items: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sAzurerequiredlabels
        violation[{"msg": msg, "details": {"missing_labels": missing}}] {
          provided := {label | input.review.object.metadata.labels[label]}
          required := {label | label := input.parameters.labels[_]}
          missing := required - provided
          count(missing) > 0
          msg := sprintf("you must provide labels: %v", [missing])
        }
